--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                         <nav>
                             <ul class="menu">
                                 <li><a href="">Home</a></li>
-                                <li><a href="">Product</a></li>
+                                <li><a href="">tProduc</a></li>
                                 <li><a href="">Pricing</a></li>
                                 <li><a href="">Contact</a></li>
                             </ul>
